--- a/weekly_mission_2/example5/package.json
+++ b/weekly_mission_2/example5/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "First_project",
+  "name": "poke",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "pokemon.js",
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
